# timekeeper

./: .env.example  README.md  projects.json  pyproject.toml  timekeep.py  timekeeper.py
.claude/: hook-state.json  project-memory.md
timekeeper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
